gnubiff -- History of visible changes.

Copyright (C) 2000-2009 Nicolas Rougier <Nicolas.Rougier@loria.fr> and
              2004-2009 Robert Sowada <sowadart@gmx.de>.
See the end for copying conditions.
Please send gnubiff bug reports to gnubiff-bugs@lists.sourceforge.net

Version 2.2.12
 * Robert Sowada
   - Changed version to 2.2.12
   - Bugfix: Format string problem
   - Bugfix: Check for libgnomeui added in configure (see support request
        #2805290 by Jleuleu and debian bug #536955 by Lucas Nussbaum)
	
Version 2.2.11		2009-04-05 18:14
 * Robert Sowada
   - Changed version to 2.2.11
   - Fixed some gcc 4.3 warnings (thanks to Andre Klitzing for providing a
        patch)
   - Changed some C style casts to C++ style static casts (thanks to Andre
        Klitzing for providing patches)
   - Fixed some gcc 4.3 problems (thanks to ChristenDoc for providing a patch)
   - Bugfix: Only get filtered messages once (thanks to Frederik Vanderstraeten
        for reporting this bug as #2140306)
   - Added Frederik Vanderstraeten to contributors

Version 2.2.10		2008-04-20 11:09
 * Robert Sowada
   - Changed version to 2.2.10
   - Updated Dutch translation (thanks to Erwin Poeze)
   - Added Erwin Poeze to contributors
   - Bugfix: Handling of message sequence numbers when using IMAP4 (thanks to
        Jan Outrata for providing a patch; this was debian bug #472080)
   - Added Jan Outrata to contributors
   - Bugfix: Not all RFC2047 compliant header lines were parsed correctly
        (thanks to Andre Klitzing for reporting the bug as #1924467 and for
        providing a patch; this is ubuntu bug #204640)
   - Bugfix: Message header fieldnames should be parsed case insensitive
        (thanks to Andre Klitzing for reporting the bug as #1924465 and for
        providing a patch; this is ubuntu bug #204642)
   - Added Andre Klitzing to contributors
	
Version 2.2.9		2008-02-03 17:48
 * Robert Sowada
   - Changed version to 2.2.9