@@ -1,0 +1,11 @@
+# see http://standards.freedesktop.org/desktop-entry-spec/latest/
+[Desktop Entry]
+Type=Application
+Version=1.0
+Name=Gnubiff
+_GenericName=Mail notification program
+_Comment=Gnubiff is a mail notification program.
+Icon=gnubiff
+Exec=gnubiff
+Terminal=false
+Categories=Network;Email;
